Custom--app/main/default/objects/EMD_COE_Request__c/EMD_COE_Request__c.object-meta.xml
<CustomObject>
    <description>Stands for Earnest Money/Close of Escrow.  This object is used to aggregate the information relating to wire requests and refunds for EM and COE payments during the acquisition process.</description>
    <label>EM/COE Tracker</label>
    <nameField>
        <displayFormat>EM/COE-{000000}</displayFormat>
        <label>EM/COE Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EM/COE Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>