Custom--app/main/default/objects/EMD_COE_Request__c/fields/Additional_Wire_Request_Old__c.field-meta.xml
<CustomField>
    <fullName>Additional_Wire_Request_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If additional COE funds are needed for the final reconciliation, link the request record here.</inlineHelpText>
    <label>Additional Wire Request Old</label>
    <referenceTo>EMD_COE_Request__c</referenceTo>
    <relationshipLabel>EM/COE Trackers</relationshipLabel>
    <relationshipName>EMD_COE_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>