Custom--app/main/default/objects/EMD_COE_Request__c/fields/Amount_Funded_Old__c.field-meta.xml
<CustomField>
    <fullName>Amount_Funded_Old__c</fullName>
    <label>Amount Funded Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>