Custom--app/main/default/objects/EMD_COE_Request__c/fields/Approved_by_Regional_Controller_Old__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Regional_Controller_Old__c</fullName>
    <label>Approved by Regional Controller Old</label>
    <type>DateTime</type>
</CustomField>