Custom--app/main/default/objects/EMD_COE_Request__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,  TEXT(Pipeline__r.Bid_Type__c) ,  TEXT(Prospect__r.Bid_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Type</label>
    <type>Text</type>
</CustomField>