Custom--app/main/default/objects/EMD_COE_Request__c/fields/Closing_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Acquisition_Date__c</fullName>
    <formula>Pipeline__r.Acquisition_Date__c</formula>
    <label>Closing/Acquisition Date</label>
    <type>Date</type>
</CustomField>