Custom--app/main/default/objects/EMD_COE_Request__c/fields/COE_File_No__c.field-meta.xml
<CustomField>
    <fullName>COE_File_No__c</fullName>
    <formula>Pipeline__r.COE_File_No__c</formula>
    <label>COE File No.</label>
    <type>Text</type>
</CustomField>