Custom--app/main/default/objects/EMD_COE_Request__c/fields/Confirmed_Refund_Due__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Refund_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Refund Due</label>
    <type>Checkbox</type>
</CustomField>