Custom--app/main/default/objects/EMD_COE_Request__c/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,   Pipeline__r.Contract_Price__c  ,   Prospect__r.Contract_Price__c )</formula>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>