Custom--app/main/default/objects/EMD_COE_Request__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <formula>IF (CONTAINS(Pipeline_Status__c , "Dead")= True, "Terminated",
 IF (CONTAINS( Prospect_Status__c  , "Dead")= True, "Terminated", "Active"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Status</label>
    <type>Text</type>
</CustomField>