Custom--app/main/default/objects/EMD_COE_Request__c/fields/Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Amount__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,    Pipeline__r.Escrow_Amount__c   ,    Prospect__r.Escrow_Amount__c  )</formula>
    <label>Escrow Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>