Custom--app/main/default/objects/EMD_COE_Request__c/fields/Escrow_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Cancelled_Date__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,    Pipeline__r.Escrow_Cancelled_Date__c   ,    Prospect__r.Escrow_Cancelled_Date__c   )</formula>
    <label>Escrow Cancelled Date</label>
    <type>Date</type>
</CustomField>