Custom--app/main/default/objects/EMD_COE_Request__c/fields/Escrow_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Close_Date__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,   Pipeline__r.Escrow_Close_Date__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Close Date</label>
    <type>Date</type>
</CustomField>