Custom--app/main/default/objects/EMD_COE_Request__c/fields/Escrow_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Open_Date__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,    Pipeline__r.Escrow_Opened_Date__c   ,    Prospect__r.Escrow_Opened_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Open Date</label>
    <type>Date</type>
</CustomField>