Custom--app/main/default/objects/EMD_COE_Request__c/fields/Expected_Escrow_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Escrow_Close_Date__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,    Pipeline__r.Escrow_Expected_Close_Date__c   ,    Prospect__r.Escrow_Expected_Close_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Escrow Close Date</label>
    <type>Date</type>
</CustomField>