Custom--app/main/default/objects/EMD_COE_Request__c/fields/Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Final_HUD__c</fullName>
    <label>Final HUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>