Custom--app/main/default/objects/EMD_COE_Request__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <formula>Pipeline__r.Fund__c</formula>
    <inlineHelpText>This field automatically reflects the value in the Fund field on the related Pipeline record.  It may or may not be the same as the value in the Tracker Entity field.</inlineHelpText>
    <label>Fund</label>
    <type>Text</type>
</CustomField>