Custom--app/main/default/objects/EMD_COE_Request__c/fields/Fund_Date_Old__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date_Old__c</fullName>
    <label>Fund Date Old</label>
    <type>Date</type>
</CustomField>