Custom--app/main/default/objects/EMD_COE_Request__c/fields/Funding_Comments_Old__c.field-meta.xml
<CustomField>
    <fullName>Funding_Comments_Old__c</fullName>
    <label>Funding Comments Old</label>
    <type>TextArea</type>
</CustomField>