Custom--app/main/default/objects/EMD_COE_Request__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <inlineHelpText>This field was used by the Salesforce Team to document an association to a Portfolio record that did not have an affiliated Pipeline record.  This field can also be used to document any other general notes.</inlineHelpText>
    <label>General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>