Custom--app/main/default/objects/EMD_COE_Request__c/fields/Number_EM_Wires__c.field-meta.xml
<CustomField>
    <fullName>Number_EM_Wires__c</fullName>
    <label># EM Wires</label>
    <summaryFilterItems>
        <field>Wire_Request__c.Type__c</field>
        <operation>equals</operation>
        <value>EM</value>
    </summaryFilterItems>
    <summaryForeignKey>Wire_Request__c.EM_COE_Tracker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>