Custom--app/main/default/objects/EMD_COE_Request__c/fields/Original_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Request_ID__c</fullName>
    <label>Original Request ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>