Custom--app/main/default/objects/EMD_COE_Request__c/fields/Other_Cost_Credits__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Credits__c</fullName>
    <inlineHelpText>For credits, enter as a negative number.  For other costs, enter as a positive number.</inlineHelpText>
    <label>Other Costs/Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>