Custom--app/main/default/objects/EMD_COE_Request__c/fields/Pending_HUD__c.field-meta.xml
<CustomField>
    <fullName>Pending_HUD__c</fullName>
    <formula>IF(NOT(ISBLANK(Escrow_Cancelled_Date__c)) , 0.00 ,
IF(Final_HUD__c > 0.00 ,0.00, 
 Total_Funds_Wired__c - Refund_Received__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending HUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>