Custom--app/main/default/objects/EMD_COE_Request__c/fields/Pending_HUD_Old__c.field-meta.xml
<CustomField>
    <fullName>Pending_HUD_Old__c</fullName>
    <formula>IF( ISBLANK( Escrow_Cancelled_Date__c ) ,   Total_Funds_Wired__c  -  Final_HUD__c   -  Refund_Received__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending HUD Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>