Custom--app/main/default/objects/EMD_COE_Request__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Property_Opportunity__c</referenceTo>
    <relationshipName>Escrow_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>