Custom--app/main/default/objects/EMD_COE_Request__c/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <formula>TEXT( Pipeline__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Status</label>
    <type>Text</type>
</CustomField>