Custom--app/main/default/objects/EMD_COE_Request__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,   Pipeline__r.Property_City__c  ,   Prospect__r.Property_City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property City</label>
    <type>Text</type>
</CustomField>