Custom--app/main/default/objects/EMD_COE_Request__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,   Pipeline__r.Property_State__c  ,   Prospect__r.Property_State_Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>