Custom--app/main/default/objects/EMD_COE_Request__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,   Pipeline__r.Property_Street__c  ,   Prospect__r.Property_Street__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street</label>
    <type>Text</type>
</CustomField>