Custom--app/main/default/objects/EMD_COE_Request__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipName>Escrow_Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>