Custom--app/main/default/objects/EMD_COE_Request__c/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <formula>TEXT(Prospect__r.Prospect_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Status</label>
    <type>Text</type>
</CustomField>