Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Amount_Old__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_Old__c</fullName>
    <label>Refunded Amount Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>