Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Refund_Days_Outstanding__c</fullName>
    <formula>TODAY()  -  Escrow_Cancelled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days O/S Since Escrow Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>