Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Due__c.field-meta.xml
<CustomField>
    <fullName>Refund_Due__c</fullName>
    <formula>IF( Final_HUD__c  > 0.00  &amp;&amp;  ISBLANK( Escrow_Cancelled_Date__c ) ,
 Total_Funds_Wired__c  -  Final_HUD__c  -  Refund_Received__c  -    Other_Cost_Credits__c ,
  Total_Funds_Wired__c  -  Refund_Received__c  -    Pending_HUD__c - Other_Cost_Credits__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>