Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Due_Old__c.field-meta.xml
<CustomField>
    <fullName>Refund_Due_Old__c</fullName>
    <formula>Total_Funds_Wired__c  -  Final_HUD__c  -  Refund_Received__c   -   Pending_HUD_Old__c  -  Other_Cost_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Due Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>