Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Received__c.field-meta.xml
<CustomField>
    <fullName>Refund_Received__c</fullName>
    <label>Refund Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>