Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request_Comments__c</fullName>
    <label>Refund Request Comments</label>
    <type>TextArea</type>
</CustomField>