Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refund_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Requested_Date__c</fullName>
    <label>Refund Requested Date</label>
    <type>Date</type>
</CustomField>