Custom--app/main/default/objects/EMD_COE_Request__c/fields/Refunded_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Date_Text__c</fullName>
    <inlineHelpText>This field is for multiple Refund Dates provided on regions' Escrow Tracker spreadsheets.</inlineHelpText>
    <label>Refunded Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>