Custom--app/main/default/objects/EMD_COE_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,  Pipeline__r.Region_Lookup__r.Name ,  Prospect__r.Region_Lookup__r.Name)</formula>
    <label>Market2</label>
    <type>Text</type>
</CustomField>