Custom--app/main/default/objects/EMD_COE_Request__c/fields/Region_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Region_Sharing__c</fullName>
    <label>Region Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>