Custom--app/main/default/objects/EMD_COE_Request__c/fields/Region_Text__c.field-meta.xml
<CustomField>
    <fullName>Region_Text__c</fullName>
    <inlineHelpText>This field was used by the Salesforce Team to populate Region for Tracker records that were not affiliated with a Prospect or Pipeline record.  As a result, the Region values could not automatically be populated from those records.</inlineHelpText>
    <label>Region Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>