Custom--app/main/default/objects/EMD_COE_Request__c/fields/Regional_Controller_Old__c.field-meta.xml
<CustomField>
    <fullName>Regional_Controller_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Controller Old</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Regional Controller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>EMD_COE_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>