Custom--app/main/default/objects/EMD_COE_Request__c/fields/Search_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Search_Address_Text__c</fullName>
    <inlineHelpText>This field is used for global searching, but it's also visible for cases in which a Tracker record was initially loaded and it did not have an association to a Prospect or Pipeline record.  In those cases, this field is used in list views and reports.</inlineHelpText>
    <label>Search Address Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>