Custom--app/main/default/objects/EMD_COE_Request__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <formula>IF (ISBLANK( Pipeline__c ) = FALSE,  Pipeline__r.Title_Company__r.Name ,   Prospect__r.Title_Company__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Company</label>
    <type>Text</type>
</CustomField>