Custom--app/main/default/objects/EMD_COE_Request__c/fields/Total_Funds_Wired__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Wired__c</fullName>
    <description>The total of Amount Funded on each related Wire Request record.</description>
    <label>Total Funds Requested</label>
    <summarizedField>Wire_Request__c.Amount_Funded__c</summarizedField>
    <summaryForeignKey>Wire_Request__c.EM_COE_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>