Custom--app/main/default/objects/EMD_COE_Request__c/fields/Tracker_Entity__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Entity__c</fullName>
    <inlineHelpText>This value may or may not tie to the Fund value that auto-populates from the Pipeline record.</inlineHelpText>
    <label>Tracker Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IH1</fullName>
            </value>
            <value>
                <fullName>IH2</fullName>
            </value>
            <value>
                <fullName>IH3</fullName>
            </value>
            <value>
                <fullName>IH4</fullName>
            </value>
            <value>
                <fullName>IH5</fullName>
            </value>
            <value>
                <fullName>IH6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>