Custom--app/main/default/objects/EMD_COE_Request__c/fields/Type_Old__c.field-meta.xml
<CustomField>
    <fullName>Type_Old__c</fullName>
    <label>Type Old</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>COE Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>