Custom--app/main/default/objects/EMD_COE_Request__c/fields/W_T_Reference_Old__c.field-meta.xml
<CustomField>
    <fullName>W_T_Reference_Old__c</fullName>
    <label>W/T Reference # Old</label>
    <length>155</length>
    <type>Text</type>
</CustomField>