Custom--app/main/default/objects/EMD_COE_Request__c/listViews/Charlotte.listView-meta.xml
<ListView>
    <fullName>Charlotte</fullName>
    <columns>NAME</columns>
    <columns>Region_Sharing__c</columns>
    <columns>Property_Street__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Fund__c</columns>
    <columns>Tracker_Entity__c</columns>
    <columns>Pipeline_Status__c</columns>
    <columns>Number_COE_Wires__c</columns>
    <columns>Number_EM_Wires__c</columns>
    <columns>Total_Funds_Wired__c</columns>
    <columns>Final_HUD__c</columns>
    <columns>Refund_Received__c</columns>
    <columns>Pending_HUD__c</columns>
    <columns>Other_Cost_Credits__c</columns>
    <columns>Refund_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region_Sharing__c</field>
        <operation>equals</operation>
        <value>Charlotte</value>
    </filters>
    <label>Charlotte</label>
    <sharedTo>
        <role>Executive</role>
        <role>Executive_Charlotte</role>
        <role>Team_Member_Charlotte</role>
    </sharedTo>
</ListView>