Custom--app/main/default/objects/EMD_COE_Request__c/listViews/Converted_with_Escrow_Cancelled.listView-meta.xml
<ListView>
    <fullName>Converted_with_Escrow_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Region_Sharing__c</columns>
    <columns>Property_Street__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Fund__c</columns>
    <columns>Tracker_Entity__c</columns>
    <columns>Converted_to_Portfolio__c</columns>
    <columns>Pipeline_Status__c</columns>
    <columns>Escrow_Cancelled_Date__c</columns>
    <columns>Total_Funds_Wired__c</columns>
    <columns>Final_HUD__c</columns>
    <columns>Refund_Received__c</columns>
    <columns>Pending_HUD__c</columns>
    <columns>Other_Cost_Credits__c</columns>
    <columns>Refund_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Converted_to_Portfolio__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Escrow_Cancelled_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>*Converted with Escrow Cancelled</label>
</ListView>