Custom--app/main/default/objects/EMD_COE_Request__c/listViews/EM_Wires_1.listView-meta.xml
<ListView>
    <fullName>EM_Wires_1</fullName>
    <columns>NAME</columns>
    <columns>Property_Street__c</columns>
    <columns>Region_Sharing__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Fund__c</columns>
    <columns>Tracker_Entity__c</columns>
    <columns>Number_EM_Wires__c</columns>
    <columns>Number_COE_Wires__c</columns>
    <columns>Escrow_Cancelled_Date__c</columns>
    <columns>Total_Funds_Wired__c</columns>
    <columns>Final_HUD__c</columns>
    <columns>Refund_Received__c</columns>
    <columns>Pending_HUD__c</columns>
    <columns>Other_Cost_Credits__c</columns>
    <columns>Refund_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_EM_Wires__c</field>
        <operation>greaterOrEqual</operation>
        <value>2</value>
    </filters>
    <label>*EM Wires > 1</label>
</ListView>