Custom--app/main/default/objects/EMD_COE_Request__c/listViews/No_Pipeline_or_Prospect.listView-meta.xml
<ListView>
    <fullName>No_Pipeline_or_Prospect</fullName>
    <columns>NAME</columns>
    <columns>Region_Sharing__c</columns>
    <columns>Search_Address_Text__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Prospect__c</columns>
    <columns>General_Notes__c</columns>
    <columns>Total_Funds_Wired__c</columns>
    <columns>Final_HUD__c</columns>
    <columns>Refund_Received__c</columns>
    <columns>Pending_HUD__c</columns>
    <columns>Other_Cost_Credits__c</columns>
    <columns>Refund_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prospect__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Pipeline__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Pipeline or Prospect</label>
</ListView>