Custom--app/main/default/objects/EMD_COE_Request__c/listViews/Pending_HUD_is_Negative.listView-meta.xml
<ListView>
    <fullName>Pending_HUD_is_Negative</fullName>
    <columns>NAME</columns>
    <columns>Property_Street__c</columns>
    <columns>Region_Sharing__c</columns>
    <columns>Pipeline__c</columns>
    <columns>Fund__c</columns>
    <columns>Tracker_Entity__c</columns>
    <columns>Total_Funds_Wired__c</columns>
    <columns>Final_HUD__c</columns>
    <columns>Refund_Received__c</columns>
    <columns>Pending_HUD__c</columns>
    <columns>Other_Cost_Credits__c</columns>
    <columns>Refund_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_HUD__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>*Pending HUD is Negative</label>
</ListView>